# projekt-zespolowy-wspa

./: # Wymagania systemu.md  Karta-projektu-propozycja-2.md  Komendy.md  README.md  karta-projektu-propozycja-1.md
app/api/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  pyproject.toml  pytest.ini
app/api/authentication/: asgi.py  config.py  manage.py  schemas.py  settings.py  urls.py  wsgi.py
app/api/authentication/authentication/: asgi.py  config.py  consts.py  db_utils.py  email_service.py  encryption_service.py  endpoints.py  models.py  password_endpoints.py  password_expiration_manager.py  password_manager_models.py  password_schemas.py  schemas.py  services.py  settings.py  urls.py  utils.py  wsgi.py
app/api/authentication/authentication/migrations/: 0001_initial.py  0002_alter_loginattempt_table_alter_passwordhistory_table_and_more.py  0003_passwordentry_passwordentryhistory_passwordfolder_and_more.py  0004_passwordexpirationnotification.py  0005_alter_loginattempt_options_and_more.py  0006_passwordsharelink_encrypted_password_share_and_more.py
app/api/authentication/authentication/templates/: verification_error.html  verification_success.html
app/api/authentication/migrations/: 0001_initial.py  0002_alter_loginattempt_table_alter_passwordhistory_table_and_more.py
app/api/authentication/tests/: README.md  __init__.py  conftest.py  test_setup.py
app/api/authentication/tests/fixtures/: __init__.py  factories.py
app/api/authentication/tests/integration/: test_auth_endpoints.py  test_bulk_operations.py  test_email_verification_endpoints.py  test_endpoints_coverage.py  test_folders.py  test_import_export.py  test_password_decrypt.py  test_password_endpoints.py  test_password_endpoints_coverage.py  test_password_entry_crud.py  test_password_generation.py  test_session_endpoints.py  test_statistics.py  test_token_endpoints.py  test_user_profile_endpoints.py
app/api/authentication/tests/unit/: test_auth_helpers.py  test_db_utils.py  test_email_service.py  test_encryption_service.py  test_other_models.py  test_password_entry_model.py  test_password_expiration_manager.py  test_password_folder_model.py  test_password_share_link_model.py  test_password_tag_model.py  test_schemas.py  test_session_management.py  test_token_model.py  test_user_model.py  (+1 more)
(+138 files in other folders)
