[project]
name = "django-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "argon2>=0.1.10",
    "argon2-cffi>=25.1.0",
    "crypto>=1.4.1",
    "cryptography>=45.0.4",
    "django-ninja>=1.4.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.2",
    "pyjwt>=2.10.1",
    "ruff>=0.11.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
    "freezegun>=1.4.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "authentication.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=authentication",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--tb=short",
    "--reuse-db",
]
testpaths = ["authentication/tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "auth: Authentication related tests",
    "password: Password management tests",
]

[tool.coverage.run]
source = ["authentication"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/manage.py",
    "*/settings.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
test = [
    "pytest-xdist>=3.8.0",
]
